- Using FlatFileItemReader to read the contents from csv file and converting it to POJO class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,4 @@ spring.datasource.password=12345
 
 # by adding below property we teeling spring batch to use the external schema
 # after launching the app for the first time we can comment this property, because the tables are already created
-spring.batch.jdbc.initialize-schema=always
-
-# this will tell spring boot, not to launch our Jobs when the the app is launched
-spring.batch.job.enabled=false
+#spring.batch.jdbc.initialize-schema=always
